--- a/src/window.ui
+++ b/src/window.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <interface>
-  <template class="GradientsWindow" parent="AdwApplicationWindow">
-    <property name="title">Gradients</property>
+  <template class="VibrantWindow" parent="AdwApplicationWindow">
+    <property name="title">Vibrant</property>
     <property name="default-width">450</property>
     <property name="default-height">550</property>
 
@@ -142,7 +142,7 @@
       </item>
 
       <item>
-        <attribute name="label" translatable="yes">_About Gradients</attribute>
+        <attribute name="label" translatable="yes">_About Vibrant</attribute>
         <attribute name="action">app.about</attribute>
       </item>
 
