--- a/src/window.ui
+++ b/src/window.ui
@@ -26,6 +26,7 @@
                 <child>
                   <object class="AdwButtonContent">
                     <property name="label" translatable="yes">Export</property>
+                    <property name="tooltip-text" translatable="yes">Generate CSS Code</property>
                     <property name="icon-name">arrow-into-box-symbolic</property>
                   </object>
                 </child>
