general: Make it possible to edit colors
This commit also makes the code a bit better.

--- a/src/window.ui
+++ b/src/window.ui
@@ -2,102 +2,74 @@
 <interface>
   <template class="VibrantWindow" parent="AdwApplicationWindow">
     <property name="title">Vibrant</property>
-    <property name="default-width">450</property>
-    <property name="default-height">650</property>
+    <property name="default-width">380</property>
+    <property name="default-height">610</property>
 
     <child>
       <object class="AdwToastOverlay" id="toast_overlay">
 
         <child>
-          <object class="AdwLeaflet" id="leaflet">
-            <property name="can-unfold">false</property>
+          <object class="AdwNavigationView" id="navigation_view">
 
             <child>
-              <object class="GtkBox">
-                <property name="orientation">vertical</property>
+              <object class="AdwNavigationPage" id="gradient_page">
+                <property name="tag">gradient_page</property>
 
-                <child>
-                  <object class="GtkHeaderBar" id="header_bar">
+                <property name="child">
+                  <object class="AdwToolbarView">
 
-                    <style>
-                      <class name="flat"/>
-                    </style>
+                    <child type="top">
+                      <object class="AdwHeaderBar">
 
-                    <child type="start">
-                      <object class="GtkButton">
+                        <child type="start">
+                          <object class="GtkButton">
 
-                        <style>
-                          <class name="flat"/>
-                        </style>
+                            <child>
+                              <object class="AdwButtonContent">
+                                <property name="label" translatable="yes">Generate CSS</property>
+                                <property name="icon-name">arrow-into-box-symbolic</property>
+                              </object>
+                            </child>
 
-                        <child>
-                          <object class="AdwButtonContent">
-                            <property name="label" translatable="yes">Export</property>
-                            <property name="tooltip-text" translatable="yes">Generate CSS Code</property>
-                            <property name="icon-name">arrow-into-box-symbolic</property>
+                          </object>
+                        </child>
+
+                        <child type="end">
+                          <object class="GtkMenuButton">
+                            <property name="primary">true</property>
+                            <property name="icon-name">open-menu-symbolic</property>
+                            <property name="menu-model">primary_menu</property>
+                            <property name="tooltip-text" translatable="yes">Main Menu</property>
                           </object>
                         </child>
 
                       </object>
                     </child>
 
-                    <child type="end">
-                      <object class="GtkMenuButton">
-                        <property name="primary">true</property>
-                        <property name="icon-name">open-menu-symbolic</property>
-                        <property name="menu-model">primary_menu</property>
-                        <property name="tooltip-text" translatable="yes">Main Menu</property>
-                      </object>
-                    </child>
-
-                  </object>
-                </child>
-
-                <child>
-                  <object class="GtkBox">
-                    <property name="orientation">vertical</property>
-                    <property name="hexpand">true</property>
-                    <property name="vexpand">true</property>
-                    <property name="margin-top">6</property>
-                    <property name="margin-bottom">18</property>
-                    <property name="margin-start">18</property>
-                    <property name="margin-end">18</property>
-                    <property name="spacing">18</property>
-
-                    <child>
-                      <object class="GtkOverlay" id="gradient_overlay">
-
-                        <property name="child">
-                          <object class="GtkBox" id="gradient_box">
-                            <property name="hexpand">true</property>
-                            <property name="vexpand">true</property>
-
-                            <style>
-                              <class name="card"/>
-                              <class name="gradient-box"/>
-                            </style>
-
-                          </object>
-                        </property>
-
-                      </object>
-                    </child>
-
-                    <child>
-                      <object class="AdwPreferencesGroup">
-                        <property name="title" translatable="yes">Properties</property>
+                    <property name="content">
+                      <object class="GtkBox">
+                        <property name="orientation">vertical</property>
+                        <property name="hexpand">true</property>
+                        <property name="vexpand">true</property>
+                        <property name="margin-top">6</property>
+                        <property name="margin-bottom">18</property>
+                        <property name="margin-start">18</property>
+                        <property name="margin-end">18</property>
+                        <property name="spacing">18</property>
 
                         <child>
-                          <object class="AdwComboRow" id="type_combo">
-                            <property name="title" translatable="yes">Gradient Type</property>
+                          <object class="GtkOverlay" id="gradient_overlay">
 
-                            <property name="model">
-                              <object class="GtkStringList">
-                                <items>
-                                  <item translatable="yes">Linear</item>
-                                  <item translatable="yes">Radial</item>
-                                  <item translatable="yes">Conic</item>
-                                </items>
+                            <property name="child">
+                              <object class="GtkBox" id="gradient_box">
+                                <property name="hexpand">true</property>
+                                <property name="vexpand">true</property>
+
+                                <style>
+                                  <class name="card"/>
+                                  <class name="gradient-box"/>
+                                </style>
+
                               </object>
                             </property>
 
@@ -105,81 +77,54 @@
                         </child>
 
                         <child>
-                          <object class="AdwActionRow" id="angle_row">
-                            <property name="title" translatable="yes">Angle</property>
-                            <property name="activatable_widget">angle_scale</property>
+                          <object class="AdwPreferencesGroup">
+                            <property name="title" translatable="yes">Properties</property>
 
                             <child>
-                              <object class="GtkScale" id="angle_scale">
-                                <property name="hexpand">true</property>
-                                <property name="draw-value">true</property>
-                                <property name="digits">0</property>
+                              <object class="AdwComboRow" id="direction_combo">
+                                <property name="title" translatable="yes">Direction</property>
 
-                                <property name="adjustment">
-                                  <object class="GtkAdjustment" id="angle_adjustment">
-                                    <property name="lower">0</property>
-                                    <property name="upper">360</property>
-                                    <property name="value">45</property>
-                                    <property name="page-increment">10</property>
-                                    <property name="step-increment">1</property>
+                                <property name="model">
+                                  <object class="GtkStringList">
+                                    <items>
+                                      <item translatable="yes">To Left</item>
+                                      <item translatable="yes">To Right</item>
+                                      <item translatable="yes">To Top</item>
+                                      <item translatable="yes">To Bottom</item>
+                                    </items>
                                   </object>
                                 </property>
 
                               </object>
                             </child>
+
                           </object>
                         </child>
 
                         <child>
-                          <object class="AdwActionRow" id="colors_row">
+                          <object class="AdwPreferencesGroup">
                             <property name="title" translatable="yes">Colors</property>
+
+                            <child>
+                              <object class="AdwEntryRow" id="color_one_entry">
+                                <property name="title" translatable="yes" context="Color in a list">Color 1</property>
+                              </object>
+                            </child>
+
+                            <child>
+                              <object class="AdwEntryRow" id="color_two_entry">
+                                <property name="title" translatable="yes" context="Color in a list">Color 2</property>
+                              </object>
+                            </child>
+
                           </object>
                         </child>
 
                       </object>
-                    </child>
-
-                  </object>
-                </child>
-
-              </object>
-            </child>
-
-            <child>
-              <object class="GtkBox">
-                <property name="orientation">vertical</property>
-
-                <child>
-                  <object class="GtkHeaderBar">
-
-                    <property name="title-widget">
-                      <object class="AdwWindowTitle">
-                        <property name="title" translatable="yes">Colors</property>
-                      </object>
                     </property>
 
-                    <style>
-                      <class name="flat"/>
-                    </style>
-
-                    <child type="start">
-                      <object class="GtkButton" id="back_button">
-                        <property name="icon-name">go-previous-symbolic</property>
-                        <property name="tooltip-text" translatable="yes">Back</property>
-                      </object>
-                    </child>
-
-                    <child type="end">
-                      <object class="GtkMenuButton">
-                        <property name="primary">true</property>
-                        <property name="icon-name">open-menu-symbolic</property>
-                        <property name="menu-model">primary_menu</property>
-                        <property name="tooltip-text" translatable="yes">Main Menu</property>
-                      </object>
-                    </child>
-
                   </object>
-                </child>
+                </property>
 
               </object>
             </child>
@@ -209,3 +154,4 @@
   </menu>
 
 </interface>
+
