--- a/src/window.ui
+++ b/src/window.ui
@@ -62,6 +62,7 @@
 
                             <property name="child">
                               <object class="GtkBox" id="gradient_box">
+                                <property name="height-request">120</property>
                                 <property name="hexpand">true</property>
                                 <property name="vexpand">true</property>
 
