--- a/src/window.ui
+++ b/src/window.ui
@@ -2,39 +2,26 @@
 <interface>
   <template class="VibrantWindow" parent="AdwApplicationWindow">
     <property name="title">Vibrant</property>
-    <property name="default-width">380</property>
-    <property name="default-height">610</property>
+    <property name="default-width">800</property>
+    <property name="default-height">650</property>
 
     <child>
       <object class="AdwToastOverlay" id="toast_overlay">
 
         <child>
-          <object class="AdwNavigationView" id="navigation_view">
+          <object class="AdwOverlaySplitView" id="navigation_view">
+            <property name="sidebar-position">GTK_PACK_END</property>
+            <property name="sidebar-width-fraction">0.5</property>
+            <property name="max-sidebar-width">300</property>
 
-            <child>
-              <object class="AdwNavigationPage" id="gradient_page">
-                <property name="tag">gradient_page</property>
+            <property name="sidebar">
+              <object class="AdwNavigationPage">
 
                 <property name="child">
                   <object class="AdwToolbarView">
 
                     <child type="top">
                       <object class="AdwHeaderBar">
-
-                        <child type="start">
-                          <object class="GtkButton">
-
-                            <child>
-                              <object class="AdwButtonContent">
-                                <property name="label" translatable="yes">Generate CSS</property>
-                                <property name="icon-name">edit-copy-symbolic</property>
-                              </object>
-                            </child>
-
-                            <signal name="clicked" handler="copy_css" swapped="true" />
-
-                          </object>
-                        </child>
 
                         <child type="end">
                           <object class="GtkMenuButton">
@@ -53,7 +40,133 @@
                         <property name="orientation">vertical</property>
                         <property name="hexpand">true</property>
                         <property name="vexpand">true</property>
-                        <property name="margin-top">6</property>
+                        <property name="margin-bottom">12</property>
+                        <property name="margin-start">12</property>
+                        <property name="margin-end">12</property>
+
+                        <child>
+                          <object class="GtkOverlay">
+                            <property name="hexpand">true</property>
+                            <property name="vexpand">true</property>
+
+                            <child>
+                              <object class="GtkBox">
+                                <property name="orientation">vertical</property>
+                                <property name="hexpand">true</property>
+                                <property name="vexpand">true</property>
+
+                                <child>
+                                  <object class="AdwPreferencesGroup">
+                                    <property name="title" translatable="yes">Properties</property>
+
+                                    <child>
+                                      <object class="AdwComboRow" id="gradient_combo">
+                                        <property name="title" translatable="yes">Gradient type</property>
+
+                                        <property name="model">
+                                          <object class="GtkStringList">
+                                            <items>
+                                              <item translatable="yes">Linear</item>
+                                              <item translatable="yes">Radient</item>
+                                              <item translatable="yes">Conic</item>
+                                            </items>
+                                          </object>
+                                        </property>
+
+                                      </object>
+                                    </child>
+
+
+                                    <child>
+                                      <object class="AdwComboRow" id="direction_combo">
+                                        <property name="title" translatable="yes">Direction</property>
+
+                                        <property name="model">
+                                          <object class="GtkStringList">
+                                            <items>
+                                              <item translatable="yes">Bottom</item>
+                                              <item translatable="yes">Right</item>
+                                              <item translatable="yes">Top</item>
+                                              <item translatable="yes">Left</item>
+                                            </items>
+                                          </object>
+                                        </property>
+
+                                      </object>
+                                    </child>
+
+                                  </object>
+                                </child>
+
+                                <child>
+                                  <object class="AdwPreferencesGroup">
+                                    <property name="title" translatable="yes">Colors</property>
+
+                                    <child>
+                                      <object class="AdwEntryRow" id="color_one_entry">
+                                        <property name="title" translatable="yes" context="Color in a list">Color 1</property>
+                                      </object>
+                                    </child>
+
+                                    <child>
+                                      <object class="AdwEntryRow" id="color_two_entry">
+                                        <property name="title" translatable="yes" context="Color in a list">Color 2</property>
+                                      </object>
+                                    </child>
+
+                                  </object>
+                                </child>
+
+                              </object>
+                            </child>
+
+                            <child type="overlay">
+                              <object class="GtkButton">
+                                <property name="halign">center</property>
+                                <property name="valign">end</property>
+
+                                <signal name="clicked" handler="copy_css" swapped="true" />
+
+                                <style>
+                                  <class name="pill"/>
+                                  <class name="suggested-action"/>
+                                </style>
+
+                                <child>
+                                  <object class="AdwButtonContent">
+                                    <property name="label" translatable="yes">Copy CSS</property>
+                                    <property name="icon-name">edit-copy-symbolic</property>
+                                  </object>
+                                </child>
+
+                              </object>
+                            </child>
+
+                          </object>
+                        </child>
+
+                      </object>
+                    </property>
+
+                  </object>
+                </property>
+
+              </object>
+            </property>
+
+            <property name="content">
+              <object class="AdwNavigationPage" id="gradient_page">
+                <property name="tag">gradient_page</property>
+
+                <property name="child">
+                  <object class="GtkWindowHandle">
+
+                    <property name="child">
+                      <object class="GtkBox">
+                        <property name="orientation">vertical</property>
+                        <property name="hexpand">true</property>
+                        <property name="vexpand">true</property>
+                        <property name="margin-top">18</property>
                         <property name="margin-bottom">18</property>
                         <property name="margin-start">18</property>
                         <property name="margin-end">18</property>
@@ -79,68 +192,6 @@
                           </object>
                         </child>
 
-                        <child>
-                          <object class="AdwPreferencesGroup">
-                            <property name="title" translatable="yes">Properties</property>
-
-                            <child>
-                              <object class="AdwComboRow" id="gradient_combo">
-                                <property name="title" translatable="yes">Gradient type</property>
-
-                                <property name="model">
-                                  <object class="GtkStringList">
-                                    <items>
-                                      <item translatable="yes">Linear</item>
-                                      <item translatable="yes">Radient</item>
-                                      <item translatable="yes">Conic</item>
-                                    </items>
-                                  </object>
-                                </property>
-
-                              </object>
-                            </child>
-
-
-                            <child>
-                              <object class="AdwComboRow" id="direction_combo">
-                                <property name="title" translatable="yes">Direction</property>
-
-                                <property name="model">
-                                  <object class="GtkStringList">
-                                    <items>
-                                      <item translatable="yes">Bottom</item>
-                                      <item translatable="yes">Right</item>
-                                      <item translatable="yes">Top</item>
-                                      <item translatable="yes">Left</item>
-                                    </items>
-                                  </object>
-                                </property>
-
-                              </object>
-                            </child>
-
-                          </object>
-                        </child>
-
-                        <child>
-                          <object class="AdwPreferencesGroup">
-                            <property name="title" translatable="yes">Colors</property>
-
-                            <child>
-                              <object class="AdwEntryRow" id="color_one_entry">
-                                <property name="title" translatable="yes" context="Color in a list">Color 1</property>
-                              </object>
-                            </child>
-
-                            <child>
-                              <object class="AdwEntryRow" id="color_two_entry">
-                                <property name="title" translatable="yes" context="Color in a list">Color 2</property>
-                              </object>
-                            </child>
-
-                          </object>
-                        </child>
-
                       </object>
                     </property>
 
@@ -148,7 +199,7 @@
                 </property>
 
               </object>
-            </child>
+            </property>
 
           </object>
         </child>
